[package]
name = "mop3"
version = "0.2.0"
edition = "2021"
authors = ["Dabe Vlohn"]
description = "Mastodon/Bluesky to POP3/SMTP gateway with async runtime"

[dependencies]
# CLI и конфигурация
clap = { version = "4.5.51", features = ["derive", "env"] }

# Асинхронный runtime
tokio = { version = "1.48.0", features = ["rt-multi-thread", "fs", "tracing", "macros"] }
tokio-util = "0.7.16"

# HTTP клиент
reqwest = { version = "0.12.24", features = ["json", "multipart"] }

# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# Время
chrono = { version = "0.4", features = ["serde"] }

# Email
mail-builder = "0.3"
mail-parser = "0.9"
html2text = "0.5"

# Утилиты
deunicode = "1.6.2"
fancy-regex = "0.13"
string_concat = "0.0.1"

# Обработка ошибок
thiserror = "2.0.17"
anyhow = "1.0.100"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
