[package]
name = "mop3"
version = "0.2.0"
edition = "2021"
authors = ["Nathan Kiesman"]
description = "Mastodon/Bluesky to POP3/SMTP gateway with fully async runtime"

[dependencies]
# CLI и конфигурация
clap = { version = "4.4", features = ["derive", "env"] }

# Асинхронный runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# HTTP клиент (асинхронный)
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# Время
chrono = { version = "0.4", features = ["serde"] }

# Email
mail-builder = "0.3"
mail-parser = "0.9"
html2text = "0.5"

# Утилиты
deunicode = "0.1"
fancy-regex = "0.13"
string_concat = "0.1"

# Обработка ошибок
anyhow = "1.0"
thiserror = "1.0"

# Async trait для trait методов
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
